Revert "fix: Calendar getting cropped issue"
This reverts commit 21d659f02bf43cf8152091b8596824a5735c786a.

--- a/apps/web-giddh/src/app/contact/contact.component.scss
+++ b/apps/web-giddh/src/app/contact/contact.component.scss
@@ -10,9 +10,7 @@
 .pd1 {
     padding: 5px;
 }
-.vendor-page {
-    overflow: visible;
-}
+
 .aging-table > tbody > tr input[type="checkbox"] {
     position: absolute !important;
     opacity: 0;
